--- a/.github/workflows/clang-tests.yml
+++ b/.github/workflows/clang-tests.yml
@@ -16,6 +16,8 @@ on:
 
 jobs:
   build_clang:
+    env:
+      ACTIONS_ALLOW_UNSECURE_COMMANDS: true
     name: clang check-all
     runs-on: ${{ matrix.os }}
     strategy:
@@ -40,4 +42,9 @@ jobs:
       uses: llvm/actions/build-test-llvm-project@main
       with:
         cmake_args: -G Ninja  -DLLVM_ENABLE_PROJECTS="clang" -DCMAKE_BUILD_TYPE=Release
-        build_target: check-clang
+        build_target: libclang
+    - name: Upload binaries
+      uses: actions/upload-artifact@v1
+      with:
+        name: binaries-${{ matrix.name }}
+        path: build/bin/
