--- a/.github/workflows/clang-tests.yml
+++ b/.github/workflows/clang-tests.yml
@@ -42,9 +42,4 @@ jobs:
       uses: llvm/actions/build-test-llvm-project@main
       with:
         cmake_args: -G Ninja  -DLLVM_ENABLE_PROJECTS="clang" -DCMAKE_BUILD_TYPE=Release
-        build_target: libclang
-    - name: Upload binaries
-      uses: actions/upload-artifact@v1
-      with:
-        name: binaries-${{ matrix.name }}
-        path: build/bin/
+        build_target: check-clang
